# highload-payments

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/highload_payments/: __init__.py
src/highload_payments/application/: __init__.py  errors.py
src/highload_payments/application/dto/: __init__.py  commands.py  results.py
src/highload_payments/application/policies/: __init__.py  retry.py
src/highload_payments/application/ports/: __init__.py  delivery.py  idempotency.py  messaging.py  repositories.py  uow.py
src/highload_payments/application/use_cases/: __init__.py  create_payment.py  deliver_webhook_event.py  publish_outbox_batch.py
src/highload_payments/apps/api/: __init__.py  bootstrap.py  main.py
src/highload_payments/apps/api/http/: __init__.py  (+2 more)
src/highload_payments/apps/dispatcher/: __init__.py  bootstrap.py  main.py
src/highload_payments/apps/worker/: __init__.py  bootstrap.py  main.py
src/highload_payments/domain/: __init__.py  errors.py
src/highload_payments/domain/entities/: __init__.py  outbox_event.py  payment.py  webhook_delivery_state.py  webhook_endpoint.py
src/highload_payments/domain/events/: __init__.py  payment_created.py
src/highload_payments/domain/ports/: __init__.py  id_generator.py
src/highload_payments/domain/value_objects/: __init__.py  money.py  outbox_status.py  payment_status.py  webhook_delivery_status.py
src/highload_payments/infrastructure/: __init__.py  settings.py  uuid_generator.py
src/highload_payments/infrastructure/db/: session.py
(+31 files in other folders)
